--- a/docs/index.css
+++ b/docs/index.css
@@ -24,25 +24,17 @@ body {
     position: absolute;
     display: block;
     background-color: var(--white);
-    height: 600px;
-    width: 900px;
+    height: 65vh;
+    width: 85vw;
     border-radius: 25px;
+    border-top-right-radius: 0px;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    padding: 10px;
-}
-
-.folder .tab::before {
-    content: "";
-    position: absolute;
-    background-color: transparent;
-    height: 23px;
-    width: 20px;
-    border-bottom-right-radius: 20px;
-    top: 0%;
-    right: 100%;
-    box-shadow: 0px 20px 0px 0px var(--white);
+    min-height: 500px;
+    min-width: 750px;
+    max-height: 1000px;
+    max-width: 1500px;
     padding: 10px;
 }
 
@@ -52,12 +44,18 @@ body {
     flex-direction: row;
     align-items: flex-start;
     background-color: var(--white);
-    border-radius: 25px;
-    top: -7%;
-    left: 100%;
-    transform: translate(-100%, 0%);
-    height: 300px;
-    width: 600px;
+    border-top-left-radius: 25px;
+    border-top-right-radius: 25px;
+    border-bottom-left-radius: 0px;
+    border-bottom-right-radius: 0px;
+    bottom: 100%;
+    right: 0%;
+    height: 5vh;
+    width: 50vw;
+    min-height: 25px;
+    min-width: 500px;
+    max-height: 50px;
+    max-width: 1000px;
     padding: 10px;
 }
 
