--- a/docs/index.css
+++ b/docs/index.css
@@ -4,12 +4,10 @@
     --orange: rgba(251, 112, 115, 1.0);
     --purple: rgba(114, 86, 135, 1.0);
     --white: rgba(255, 255, 255, 1.0);
+    --gray-light: rgba(187, 187, 187, 0.40);
+    --gray-dark: rgba(77, 77, 77, 1.0);
 
-    --gray: rgba(43, 42, 51, 1.0);
-    --green-01: rgba(1, 56, 0, 0.0);
-    --green-02: rgba(2, 141, 0, 0.5);
-    --white-02: rgba(255, 255, 255, 0.25);
-    --font: "Times New Roman", Times, serif;
+    font-family: "Trebuchet MS";
 }
 
 body {
@@ -59,10 +57,52 @@ body {
     padding: 10px;
 }
 
-.container {
+.folder .container {
+    position: relative;
     display: flex;
-    flex-direction: row;
-    align-items: flex-start;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 25px;
+    background-color: var(--gray-light);
+    color: var(--gray-dark);
+    font-size: 15px;
+    height: 100%;
+    width: 240px;
+}
+
+.folder .container .image {
+    position: relative;
+    display: block;
+    background-image: url("placeholder.jpg");
+    background-repeat: no-repeat;
+    background-size: 100%;
+    border-radius: 50px;
+    height: 150px;
+    width: 150px;
+    margin: 20px;
+}
+
+.folder .container .title {
+    position: relative;
+    display: block;
+    font-size: 25px;
+    text-transform: uppercase;
+    padding: 10px;
+}
+
+.folder .container .role {
+    position: relative;
+    display: block;
+    background-color: var(--purple);
+    color: var(--white);
+    border-radius: 20px;
+    padding: 10px;
+}
+
+.folder .container .text {
+    position: relative;
+    display: block;
+    padding: 10px;
 }
 
 button {
@@ -78,7 +118,6 @@ button {
 }
 
 .slide {
-    font-family: 'Trebuchet MS';
     text-transform: uppercase;
     letter-spacing: 2px;
 }
