--- a/docs/index.css
+++ b/docs/index.css
@@ -3,6 +3,7 @@
     --blue: rgba(27, 102, 133, 1.0);
     --gray-light: rgba(187, 187, 187, 0.40);
     --gray-dark: rgba(77, 77, 77, 1.0);
+    --green: rgb(2, 102, 52, 1.0);
     --orange: rgba(251, 112, 115, 1.0);
     --purple: rgba(114, 86, 135, 1.0);
     --white: rgba(255, 255, 255, 1.0);
@@ -34,7 +35,6 @@ body {
     min-width: 750px;
     max-height: 1000px;
     max-width: 1200px;
-    padding: 10px;
 }
 
 .folder .tab {
@@ -77,6 +77,7 @@ body {
     display: block;
     background-image: url("placeholder.jpg");
     background-repeat: no-repeat;
+    background-position: center;
     background-size: 100%;
     border-radius: 50px;
     height: 150px;
@@ -167,6 +168,74 @@ body {
     box-shadow: 5px 5px 0 0 var(--purple);
     transform: translate(-3%, -3%);
     transition: 0.25s;
+}
+
+.folder .container-education {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    border-radius: 25px;
+    background-color: var(--gray-light);
+    color: var(--gray-dark);
+    font-size: 15px;
+    height: 100%;
+    width: 100%;
+}
+
+.folder .container-education .image {
+    position: absolute;
+    display: block;
+    background-color: var(--white);
+    background-image: url("spartan.jpg");
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 250%;
+    border-radius: 100%;
+    top: 0;
+    right: 0%;
+    height: 200px;
+    width: 200px;
+    margin: 20px;
+}
+
+.folder .container-education .triangle {
+    position: absolute;
+    display: block;
+    overflow: hidden;
+    top: -1%;
+    right: 0%;
+    width: 400px;
+    height: 400px;
+    transform: rotate(180deg);
+}
+
+.folder .container-education .triangle:before {
+    content: "";
+    position: absolute;
+    background: var(--white);
+    width: 141.42%;
+    height: 141.42%;
+    transform-origin: 0 0;
+    transform: rotate(45deg);
+}
+
+.folder .container-education .title {
+    position: relative;
+    display: block;
+    font-size: 25px;
+    text-transform: uppercase;
+    padding: 10px;
+    top: 3%;
+    left: 5%;
+}
+
+.folder .container-education .text {
+    position: relative;
+    display: block;
+    max-width: 90%;
+    left: 5%;
+    padding: 10px;
 }
 
 button {
