--- a/docs/index.css
+++ b/docs/index.css
@@ -3,10 +3,11 @@
     --blue: rgba(27, 102, 133, 1.0);
     --gray-light: rgba(187, 187, 187, 0.40);
     --gray-dark: rgba(77, 77, 77, 1.0);
-    --green: rgb(2, 102, 52, 1.0);
+    --green: rgba(23, 69, 59, 1.0);
     --orange: rgba(251, 112, 115, 1.0);
     --purple: rgba(114, 86, 135, 1.0);
     --white: rgba(255, 255, 255, 1.0);
+    --yellow: rgba(245, 190, 97, 1.0);
 
     font-family: "Trebuchet MS";
 }
@@ -225,6 +226,8 @@ body {
     display: block;
     overflow: hidden;
     font-size: 25px;
+    text-decoration-line: overline underline;
+    text-decoration-color: var(--white);
     text-transform: uppercase;
     white-space: nowrap;
     top: 0%;
@@ -248,14 +251,90 @@ body {
     animation: typewriter-effect 5s steps(100, jump-end) 3s 1 normal both;
 }
 
-@keyframes typewriter-effect {
-    from {
-        width: 0%;
-    }
+.folder .container-experience {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    border-radius: 25px;
+    background-color: var(--gray-light);
+    color: var(--gray-dark);
+    font-size: 15px;
+    height: 100%;
+    width: 100%;
+}
 
-    to {
-        width: 88%;
-    }
+.folder .container-experience .above-title {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    color: var(--yellow);
+    font-size: 12px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    top: 0%;
+    left: 5%;
+    max-width: 95%;
+    margin-top: 15px;
+    animation: typewriter-effect 5s steps(100, jump-end) 0s 1 normal both;
+}
+
+.folder .container-experience .title {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    font-size: 25px;
+    text-transform: uppercase;
+    white-space: nowrap;
+    top: 0%;
+    left: 5%;
+    max-width: 95%;
+    animation: typewriter-effect 5s steps(100, jump-end) 0s 1 normal both;
+}
+
+.folder .container-experience .text {
+    position: relative;
+    display: block;
+    overflow: hidden;
+    font-size: 17px;
+    white-space: nowrap;
+    top: 0%;
+    left: 12%;
+    max-width: 88%;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    animation: typewriter-effect 5s steps(100, jump-end) 3s 1 normal both;
+}
+
+.folder .container-skills {
+    position: absolute;
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    border-radius: 25px;
+    background-color: var(--gray-light);
+    color: var(--gray-dark);
+    font-size: 15px;
+    height: 100%;
+    width: 100%;
+}
+
+.folder .container-skills .title {
+    position: relative;
+    display: block;
+    font-size: 25px;
+    text-transform: uppercase;
+    padding: 10px;
+    top: 3%;
+    left: 5%;
+}
+
+.folder .container-skills .text {
+    position: relative;
+    display: block;
+    max-width: 90%;
+    left: 5%;
+    padding: 10px;
 }
 
 button {
@@ -279,4 +358,14 @@ button {
     color: var(--white);
     box-shadow: inset 150px 0 0 0 var(--purple);
     transition: 0.25s;
+}
+
+@keyframes typewriter-effect {
+    from {
+        width: 0%;
+    }
+
+    to {
+        width: 100%;
+    }
 }
