--- a/docs/index.css
+++ b/docs/index.css
@@ -337,6 +337,37 @@ body {
     padding: 10px;
 }
 
+.folder .container-skills .container-box {
+    position: relative;
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
+    width: 100%;
+    height: 100%;
+    margin-bottom: 5px;
+}
+
+.folder .container-skills .container-box .box {
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+    border: 2px solid var(--blue);
+    border-radius: 100%;
+    width: 85px;
+    height: 85px;
+    margin: auto;
+}
+
+.folder .container-skills .container-box .box:hover {
+    background-color: var(--gray-dark);
+    color: var(--white);
+    box-shadow: 5px 5px 0 0 var(--blue);
+    transform: translate(-3%, -3%);
+    transition: 0.25s;
+}
+
 button {
     color: var(--orange);
     background: none;
