--- a/docs/index.css
+++ b/docs/index.css
@@ -372,7 +372,7 @@ body {
     position: absolute;
     display: flex;
     flex-direction: column;
-    align-items: left;
+    align-items: center;
     border-radius: 25px;
     background-color: var(--gray-light);
     color: var(--gray-dark);
@@ -404,6 +404,49 @@ body {
     max-width: 88%;
     margin-top: 5px;
     margin-bottom: 5px;
+}
+
+.folder .container-contact .input-group {
+    position: relative;
+    margin: 50px;
+}
+
+.folder .container-contact .input {
+    margin: 10px;
+    padding: 10px;
+    width: 400px;
+    border: none;
+    border-radius: 4px;
+    color: var(--white);
+    background-color: var(--gray-light);
+    outline: 2px solid var(--white);
+}
+
+.folder .container-contact .input-label {
+    position: absolute;
+    top: 0;
+    left: 0;
+    color: var(--white);
+    transform: translate(20px, 20px);
+    transition: transform 0.25s;
+}
+
+.folder .container-contact .input,
+.folder .container-contact .input-label {
+    cursor: text;
+}
+
+.input:focus+.input-label,
+.input:valid+.input-label {
+    transform: translate(20px, -7px) scale(0.8);
+    color: var(--orange);
+    padding-inline: 5px;
+    background-color: transparent;
+}
+
+.folder .container-contact .input:is(:focus, :valid) {
+    outline-color: var(--orange);
+    background-color: var(--gray-dark);
 }
 
 button {
