--- a/docs/index.css
+++ b/docs/index.css
@@ -395,7 +395,6 @@ form .flex-top {
     border-radius: 25px;
     width: 100%;
     height: 35%;
-    /* border: 2px solid red; */
 }
 
 form .flex-top .flex-left {
@@ -405,7 +404,6 @@ form .flex-top .flex-left {
     border-radius: 25px;
     height: 100%;
     width: 50%;
-    /* border: 2px solid cyan; */
 }
 
 form .flex-top .flex-right {
@@ -415,7 +413,6 @@ form .flex-top .flex-right {
     border-radius: 25px;
     height: 100%;
     width: 50%;
-    /* border: 2px solid yellow; */
 }
 
 form .flex-bottom {
@@ -425,10 +422,9 @@ form .flex-bottom {
     border-radius: 25px;
     width: 100%;
     height: 75%;
-    /* border: 2px solid green; */
 }
 
-.text-box {
+form .text-box {
     position: relative;
     display: block;
     border-radius: 4px;
@@ -438,7 +434,7 @@ form .flex-bottom {
     margin: 40px 0px 20px 0px;
 }
 
-.text-box input {
+form .text-box input {
     position: relative;
     display: block;
     border: none;
@@ -451,28 +447,19 @@ form .flex-bottom {
     padding: 5px 10px 5px 10px;
 }
 
-.text-box input:focus {
-    outline-color: var(--orange);
-}
-
-.text-box label {
+form .text-box label {
     position: absolute;
     bottom: 107%;
     left: 20px;
 }
 
-.text-box input,
-.text-box label {
-    cursor: text;
-}
-
-input:focus+label {
+form input:focus+label {
     color: var(--orange);
     transform: translate(30px, 0px);
     transition: 0.25s;
 }
 
-.text-area {
+form .text-area {
     position: relative;
     display: block;
     border-radius: 4px;
@@ -483,7 +470,7 @@ input:focus+label {
     margin: 30px 0px 40px 0px;
 }
 
-.text-area textarea {
+form .text-area textarea {
     position: relative;
     display: block;
     border: none;
@@ -496,28 +483,31 @@ input:focus+label {
     padding: 10px 10px 10px 10px;
 }
 
-.text-area textarea:focus {
-    outline-color: var(--orange);
-}
-
-.text-area label {
+form .text-area label {
     position: absolute;
     bottom: 102%;
     left: 20px;
 }
 
-.text-area textarea,
-.text-area label {
-    cursor: text;
-}
-
-textarea:focus+label {
+form textarea:focus+label {
     color: var(--orange);
     transform: translate(30px, 0px);
     transition: 0.25s;
 }
 
-.send-box {
+form .text-box input:focus,
+form .text-area textarea:focus {
+    outline-color: var(--orange);
+}
+
+form .text-box input,
+form .text-box label,
+form .text-area textarea,
+form .text-area label {
+    cursor: text;
+}
+
+form .send-box {
     position: relative;
     display: block;
     border-radius: 4px;
@@ -527,7 +517,7 @@ textarea:focus+label {
     transform: translate(-50%, 0%);
 }
 
-.send-box input {
+form .send-box input {
     position: relative;
     border-radius: 4px;
     border: none;
@@ -538,7 +528,7 @@ textarea:focus+label {
     width: 100%;
 }
 
-.send-box input:hover {
+form .send-box input:hover {
     outline-color: var(--orange);
     background-color: var(--white);
     border-radius: 25px;
@@ -565,6 +555,12 @@ button {
 .slide:focus {
     color: var(--white);
     box-shadow: inset 150px 0 0 0 var(--purple);
+    transition: 0.25s;
+}
+
+.slide:active {
+    color: var(--white);
+    box-shadow: inset 150px 0 0 0 var(--yellow);
     transition: 0.25s;
 }
 
