--- a/game/index.css
+++ b/game/index.css
@@ -1,11 +1,13 @@
 body {
-    background-color: rgb(30, 25, 40);
+    /* background-color: rgb(30, 25, 40); */
+    background-color: rgba(0, 0, 0, 1);
 }
 
 canvas {
     position: absolute;
     display: block;
     background-color: rgba(0, 0, 0, 1);
+    border: 1px solid white;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
