--- a/game/index.css
+++ b/game/index.css
@@ -1,44 +1,51 @@
 body {
-  background-color: #000000;
+  background-color: black;
 }
 
 canvas {
   position: absolute;
   display: block;
-  background-color: #000000;
-  border: 1px solid #ffffff;
+  background-color: black;
+  border: 1px solid white;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
 }
 
 button {
-  position: absolute;
+  position: relative;
   display: block;
   cursor: pointer;
-  background-color: #505050;
-  color: #ffffff;
+  background-color:darkgrey;
+  color: white;
   border: none;
   font-size: 18px;
   font-family: monospace;
   text-align: center;
   padding: 15px;
+  margin: 15px;
   width: 250px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 button.play {
-  background-color: #ac6100;
+  background-color: firebrick;
 }
 
 button.again {
-  background-color: #005800;
-  top: 45%;
+  background-color: tomato;
 }
 
 button.quit {
-  background-color: #580000;
-  top: 55%;
+  background-color: palevioletred;
+}
+
+div.buttons {
+  position: absolute;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
