--- a/game/index.css
+++ b/game/index.css
@@ -40,6 +40,9 @@ button.quit {
 }
 
 button.controls {
+  width: 200px;
+  height: 200px;
+  /* border-radius: 100%; */
   background-color: skyblue;
 }
 
@@ -54,10 +57,26 @@ div.buttons {
   transform: translate(-50%);
 }
 
-div.controls {
+div.controls{
   position: relative;
   display: flex;
   flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+div.controlsLeftRight {
+  position: relative;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+}
+
+div.controlsUpDown {
+  position: relative;
+  display: flex;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
 }
