--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.css
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.css
@@ -1,40 +1,71 @@
 body {
-  background-image:  white;
+  background-color:  white;
+  color: tan;
+  font-family: Cambria;
   margin: auto;
 }
 
 h1 {
-    background-color: seagreen;
+    background-color: tan;
     color: white;
     text-align: center;
-    padding: 25px 0px;
+    padding: 50px 50px;
     margin-top: 0px;
 }
 
 h2 {
+    color: tan;
     text-align: center;
     margin: auto;
 }
 
 h3 {
+    color: tan;
     text-align: center;
 }
 
 p {
+    color: slategray;
     text-align: center;
     max-width: 1000px;
     margin: auto;
+    margin-bottom: 20px;
 }
+
+ul {
+    color: slategray;
+    padding-left: 20px;
+}
+
+li {
+    padding: 5px 0px;
+}
+
+div.list-number-text {
+  display: flex;
+  flex-direction: row;
+}
+
+div.list-number {
+    display: inline-block;
+    min-width: 50px;
+}
+
+div.list-text {
+    display: inline-block;
+}
+
 div.ingredients-and-utensils {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  align-items: center;
+  align-items: flex-start;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 500px) {
     div.ingredients-and-utensils {
         flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -43,7 +74,7 @@ div.ingredients {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 25px 50px;
+  margin: 25px 25px;
 }
 
 div.utensils {
@@ -51,7 +82,7 @@ div.utensils {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 25px 50px;
+  margin: 25px 25px;
 }
 
 div.how-to-make {
@@ -59,12 +90,12 @@ div.how-to-make {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin: 25px 50px;
+  margin: 25px 50px 100px 50px;
 }
 
 footer {
-    background-color: seagreen;
+    background-color: tan;
     color: white;
     text-align: center;
-    padding: 25px 0px;
+    padding: 25px 50px;
 }
