--- a/recipes/chicken-and-gnocchi-soup/index.css
+++ b/recipes/chicken-and-gnocchi-soup/index.css
@@ -1,7 +1,7 @@
 body {
     background-color:  white;
     color: palegoldenrod;
-    font-family: Cambria;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: auto;
 }
 
