--- a/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.css
+++ b/recipes/iced-brown-sugar-oatmilk-shaken-espresso/index.css
@@ -1,7 +1,7 @@
 body {
     background-color:  white;
     color: tan;
-    font-family: Cambria;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: auto;
 }
 
