--- a/recipes/italian-meatballs/index.css
+++ b/recipes/italian-meatballs/index.css
@@ -1,7 +1,7 @@
 body {
     background-color:  white;
     color: indianred;
-    font-family: Cambria;
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
     margin: auto;
 }
 
