--- a/index.css
+++ b/index.css
@@ -1,7 +1,7 @@
 body {
     background-color:  ghostwhite;
     color: rosybrown;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: monospace;
     margin: auto;
 }
 
